# nexus

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  TODO.md  go.mod  go.sum  install.sh  nexus.yaml  process-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/nexus/: main.go  version_test.go
cmd/nexus-pm/: main.go
docs/: index.html
docs-src/: README.md  build.py  requirements.txt
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  retry_test.go  route_test.go  selfupdate_test.go  socket.go  socket_test.go
internal/db/: db.go  db_test.go
internal/git/: candidates_test.go  git.go  git_test.go  ref.go  ref_test.go
internal/home/: home.go  home_test.go
internal/lifecycle/: lifecycle.go  lifecycle_test.go
internal/penv/: penv.go  penv_test.go
internal/poller/: poller.go  poller_test.go  queue.go  queue_test.go
internal/spec/: spec.go  spec_test.go
internal/supervisor/: os.go  os_test.go  remote.go  runner.go  supervisor.go  supervisor_test.go
scripts/: build.sh  test_pc_update.py
src/nexus/: web.py  (+5 more)
tests/: conftest.py  test_config.py  test_config_shorthand.py  test_deploy_retry.py  test_e2e.py  test_env.py  test_external_env_change.py  test_inline.py  test_install.py  test_live_add.py  test_nested.py  test_poller.py  test_process_compose.py  test_recovery_env_ordering.py  test_ref_glob.py  test_register.py  test_self_update.py  test_setup.py  test_socket_routes.py  test_start.py  test_stop_start.py  test_subfolder.py  test_subfolder_external.py  test_web.py
web/: README.md  nexus.yaml  requirements.txt
(+10 files in other folders)
